# planetviewer

./: .gitignore  .prettierrc  index.html  package.json  pnpm-lock.yaml
src/: App.tsx  index.tsx  styles.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: desktop.json
src-tauri/src/: main.rs  udp.rs
src/components/: Placeholder.tsx  PlanetDisplay.tsx  PlanetInfoDisplay.tsx  PlanetInfoItem.tsx  PlanetModelDisplay.tsx  PlanetSoundPlayer.tsx
src/const/: index.ts
src/types/: index.ts
